--- a/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.html
+++ b/src/app/features/lms/grp/components/policy/components/policy-listing/policy-listing.component.html
@@ -6,6 +6,9 @@
             <i class="fa fa-search"></i>
             <input type="text" class="form-control form-input" placeholder="Search"
             [(ngModel)]="searchTerm" (input)="applyFilter()" (ngModelChange)="applyFilter()">
+
+            <p-multiSelect [options]="columnOptions" [(ngModel)]="selectedColumns">
+            </p-multiSelect>
           </div>
 
 <div class="card mt-1">
@@ -13,22 +16,23 @@
     [tableStyle]="{'min-width': '50rem'}" (onRowSelect)="onRowSelect($event)" styleClass="p-datatable-striped">
         <ng-template pTemplate="header">
             <tr>
-                <th>Policy number</th>
-                <th>Product</th>
-                <th>Status</th>
-                <th>Effective date</th>
-                <th>Premium</th>
-                <th>Sum assured</th>
+                <th *ngIf="selectedColumns.includes('policy_number')">Policy number</th>
+                <th *ngIf="selectedColumns.includes('description')">Product</th>
+                <th *ngIf="selectedColumns.includes('status')">Status</th>
+                <th *ngIf="selectedColumns.includes('effective_date')">Effective date</th>
+                <th *ngIf="selectedColumns.includes('total_premium')">Premium</th>
+                <th *ngIf="selectedColumns.includes('total_sum_assured')">Sum assured</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-policy>
             <tr [pSelectableRow]="policy" class="table-row-spacing">
-                <td>{{policy.policy_number}}</td>
-                <td>{{policy.description | titlecase}}</td>
-                <td>{{policy.status}}</td>
-                <td>{{policy.effective_date}}</td>
-                <td>{{policy.total_premium | number }}</td>
-                <td>{{policy.total_sum_assured | number}}</td>
+            
+                <td *ngIf="selectedColumns.includes('policy_number')">{{ policy.policy_number }}</td>
+                <td *ngIf="selectedColumns.includes('description')">{{ policy.description | titlecase }}</td>
+                <td *ngIf="selectedColumns.includes('status')">{{ policy.status }}</td>
+                <td *ngIf="selectedColumns.includes('effective_date')">{{ policy.effective_date }}</td>
+                <td *ngIf="selectedColumns.includes('total_premium')">{{ policy.total_premium | number }}</td>
+                <td *ngIf="selectedColumns.includes('total_sum_assured')">{{ policy.total_sum_assured | number }}</td>
             </tr>
         </ng-template>
     </p-table>
