--- a/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/lms/grp/components/policy/components/policy-summary/policy-summary.component.html
@@ -401,41 +401,184 @@
                     </p-tabView>
                 </p-tabPanel>
                 <p-tabPanel header="Reports">
-                    <div class="row">
-                        <div class="col-4">
-                            <div style="color: #00529B;">Clients</div>
-                            <div style="color: #000;">Fund value statement</div>
-                            <div style="color: #000;">Fund value registers</div>
-                            <div style="color: #000;">Member statement</div>
-                            <div style="color: #000;">Receipt registers</div>
-                            <div style="color: #000;">Comission statement</div>
-    
+
+                    <div class="accordion col-6" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                              <span class="accordion-header">Clients</span>
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+
+                                <table>
+                                    <tr class="hiper-link">
+                                        <td>Fund value statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                    
+                                    <tr class="hiper-link">
+                                        <td>Fund value registers</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Member statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Receipt registers</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Commission statements</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                </table>
+
+                              </div>
+                          </div>
                         </div>
-                        <div class="col-4">
-                            <div style="color: #00529B;">User</div>
-                            <div style="color: #000;">Fund value statement</div>
-                            <div style="color: #000;">Fund value registers</div>
-                            <div style="color: #000;">Member statement</div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <span class="accordion-header">Policy members</span>
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <table>
+                                    <tr class="hiper-link">
+                                        <td>Fund value statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                                
+                            </div>
+                          </div>
                         </div>
-                        <div class="col-4">
-                            <div style="color: #00529B;">Scheme facilitators</div>
-                            <div style="color: #000;">Fund value statement</div>
-                            <div style="color: #000;">Fund value registers</div>
-                            <div style="color: #000;">Member statement</div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <span class="accordion-header">User</span>
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <table>
+                                    <tr class="hiper-link">
+                                        <td>Fund value statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Fund value registers</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Member statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                              </div>
+                          </div>
                         </div>
-                    </div>
-    
-                    <div class="row">
-                        <div class="col-4">
-                            <div style="color: #00529B;">members</div>
-                            <div style="color: #000;">Fund value statement</div>
-                        </div>
-                        <div class="col-4">
-                            <div style="color: #00529B;">Intermediary</div>
-                            <div style="color: #000;">Fund value statement</div>
-                            <div style="color: #000;">Fund value registers</div>
-                        </div>
-                    </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                  <span class="accordion-header">Intermediary</span>
+                              </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <table>
+                                    <tr class="hiper-link">
+                                        <td>Fund value statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Fund value registers</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                         </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFive">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                  <span class="accordion-header">Scheme facilitators</span>
+                              </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <table>
+                                    <tr class="hiper-link">
+                                        <td>Fund value statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Fund value registers</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+
+                                    <tr class="hiper-link">
+                                        <td>Member statement</td>
+                                        <td class="hidden-elements">
+                                            <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;
+                                            <a href="#" download><i class="fas fa-download" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
                 </p-tabPanel>
             </p-tabView>
             <!-- tabView -->
