--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -12,7 +12,7 @@
   border: 1px solid rgba(220, 220, 220, 0.85);
   border-radius: 5px;
   flex: 1;
-  padding: 20px;
+  padding: 48px;
 }
 
 .add-client-button-container {
@@ -144,19 +144,18 @@ a.routerLink.active .circle {
 .link {
   text-decoration: underline;
   cursor: pointer;
-  color: blue;
+  color: #0070C9;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .link:hover {
   color: darkblue;
-}
-
-.even-column {
-  background-color: #fefefe;
-}
-
-.odd-column {
-  background-color: rgb(250, 250, 250);
 }
 
 input[type="number"] {
@@ -178,6 +177,7 @@ input[type="number"]::-webkit-outer-spin-button {
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #00529B;
+  background-color: #FFF;
 }
 
 .file-text {
@@ -189,9 +189,148 @@ input[type="number"]::-webkit-outer-spin-button {
   line-height: normal;
 }
 
+.member-dets {
+  color: #00529B;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.add-member {
+  color: #000;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.download-member {
+  color: rgba(0, 0, 0, 0.50);
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+:host ::ng-deep {
+  .p-datatable .p-datatable-thead>tr>th {
+    color: #000000;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    opacity: 70%;
+    white-space: nowrap;
+  }
+
+  .p-datatable-thead {
+    border-radius: 4px 0px 0px 0px;
+    background: #BAD0E4;
+  }
+}
+
+/* p-multiSelect {
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
+:host ::ng-deep .p-multiselect-label-container {
+  display: none;
+}
+
+:host ::ng-deep .p-multiselect {
+  height: auto;
+}
+
+:host ::ng-deep .p-multiselect-panel {
+  max-height: 300px;
+  max-width: 100%; 
+  overflow-y: auto;
+}
+
+:host ::ng-deep .p-multiselect-trigger {
+  width: 20px;
+  height: 20px;
+} */
+
 #tdStyle {
   padding-left: 0.55rem;
 }
+
+.form {
+  position: relative;
+  width: 270px;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.form .fa-search {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  color: #9ca3af;
+}
+
+.form span {
+  position: absolute;
+  right: 17px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+}
+
+.form-input {
+  height: 35px;
+  text-indent: 33px;
+  border-radius: 4px;
+  width: 100%;
+  flex: 1;
+}
+
+.form-input:focus {
+  box-shadow: none;
+  border: 1;
+}
+
+p-multiSelect {
+  margin-left: 10px;
+  margin-top: 15px;
+}
+
+:host ::ng-deep .p-multiselect-label-container {
+  display: none;
+}
+
+:host ::ng-deep .p-multiselect {
+  height: auto;
+}
+
+:host ::ng-deep .p-multiselect-panel {
+  max-height: 300px;
+  max-width: 100%; 
+  overflow-y: auto;
+}
+
+:host ::ng-deep .p-multiselect-trigger {
+  width: 20px;
+  height: 20px;
+}
+
+
 @media (max-width: 820px) {
   .scrollable-container {
     flex-direction: column;
