--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -71,8 +71,9 @@
             <div class="row mt-2 mx-4 mb-4">
               <div class="col-4">
                 <label for="minmax-buttons" id="quote-label">Risk ID</label>
-                <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" [(ngModel)]="passedRiskId" (change)="riskIdPassed()">  
-                 
+                  <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" [(ngModel)]="passedRiskId" (change)="riskIdPassed()">   -->
+                  <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="propertyId" (input)="riskIdPassed($event)">
+
             </div>
             <div class="col-4">
                 <label for="minmax-buttons" id="quote-label" class="required">Risk description</label>
@@ -81,34 +82,33 @@
             </div>
                 <div class="col-4">
                   <label for="minmax-buttons" id="quote-label" class="required">Cover type</label>
-                  <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="coverTypeShortDescription" [(ngModel)]="selectedCoverType" (change)="filterMandatorySections()">
+                  <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="coverTypeShortDescription" [(ngModel)]="selectedCoverType" (change)="filterMandatorySections()">
+                    <option *ngFor="let covertype of subclassCoverType" [value]="covertype.coverTypeShortDescription">{{covertype.description}}</option>
+                  </select> -->
+                  <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="coverTypeShortDescription">
                     <option *ngFor="let covertype of subclassCoverType" [value]="covertype.coverTypeShortDescription">{{covertype.description}}</option>
                   </select>
+                  
                 </div>
                
             </div>
             <div class="row mt-2 mx-4 mb-4">
               <div class="col-4">
                 <label for="minmax-buttons" id="quote-label"  class="required">Premium band</label>
-                <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input"  >
+                <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="binderCode" >
                     <option *ngFor="let binder of binderListDetails" [value]="binder.code">
                       {{binder.binder_name}}
                     </option>
                 </select>    
             </div>
             <div class="col-xl-4">
-              <label for="" id="quote-label">Cover From</label>
-              <!-- <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate"> -->
-              <!-- <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="dateWithEffectFrom" [(ngModel)]="coverFromDate" (ngModelChange)="updateCoverToDate()"> -->
-              <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="dateWithEffectFrom" [(ngModel)]="coverFromDate" (ngModelChange)="updateCoverToDate()">
+              <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="dateWithEffectFrom">
 
           </div>
              
             <div class="col-xl-4">
               <label for="" id="quote-label">Cover To</label>
-              <!-- <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate"> -->
-              <!-- <input type="date" id="cover-to" class="form-control form-control-sm mb-1"  formControlName="dateWithEffectFrom" [(ngModel)]="coverToDate"> -->
-              <input type="date" id="cover-to" class="form-control form-control-sm mb-1" formControlName="dateWithEffectTo" [(ngModel)]="coverToDate">
+              <input type="date" id="cover-to" class="form-control form-control-sm mb-1" formControlName="dateWithEffectTo">
 
           </div>
             </div>
